--- a/package.json
+++ b/package.json
@@ -7,5 +7,17 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "onyedika-anagha",
-  "license": "ISC"
+  "license": "ISC",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/onyedika-anagha/new-node-project.git"
+  },
+  "bugs": {
+    "url": "https://github.com/onyedika-anagha/new-node-project/issues"
+  },
+  "homepage": "https://github.com/onyedika-anagha/new-node-project#readme",
+  "dependencies": {
+    "express": "^4.18.2",
+    "uuid": "^9.0.0"
+  }
 }
